<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/layout_xxx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_dialog_rate">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:textAllCaps="true"
                android:text="@string/rate_us"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:visibility="visible"/>
        </RelativeLayout>

        <RatingBar
            android:id="@+id/mRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleDialog"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/b7"
            android:numStars="5"
            android:progressTint="@color/b7"
            android:secondaryProgressTint="@color/b7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:layout_below="@+id/layout_xxx"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="?android:selectableItemBackground"
                android:paddingTop="8dp"
                android:textColor="#fff"
                android:textStyle="bold"
                android:text="@string/lbl_later"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/btnRate"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:background="?android:selectableItemBackground"
                android:textColor="#0dd298"
                android:paddingTop="8dp"
                android:text="@string/lbl_rate"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>